# word-embeddings-playground

./: .dockerignore  .gitignore  Cargo.toml  DEV.org  Dockerfile  justfile  run.sh  scratch.ipynb  scratch.py
examples/: dot-product-candle.rs  dot-product.rs  embeddings-cbow.rs  stemmers.rs  tokenize.rs
gensim_test/: __init__.py  doc2vec.py  model.py  viz.py
src/: dataset.rs  lib.rs  main.rs  vocab_builder.rs  word2vec.rs
src/word2vec/: cbow.rs  files.rs  mod.rs  net.rs  skip_gram.rs  training.rs
