[package]
name = "word-embeddings-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
candle-core = { version = "0.3.0" }
candle-nn = "0.3.0"
env_logger = "0.10.0"
kdam = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.2"
rust_tokenizers = "8.1.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
